--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -26,5 +26,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm i
+      - run: npm install --global surge
+      - run: surge./build myreact_mk.surge.sh --token ${{   secrets.SURGE_TOKEN }}
       - run: npm run build --if-present
+       - run: surge./build myreact_mk.surge.sh --token ${{   secrets.SURGE_TOKEN }}
       - run: npm test
