--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,21 @@
-name: Deploy
-
-on:
-  push:
-    branches: [ main ]
-
+name: Deploy Surge Website   
+on: [push]
 jobs:
-    deploy:
-      runs-on: ubuntu-latest
-
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      # Install node version 12
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: '12'
-
-      # Install npm packages
-      - name: Install packages
-        run: npm install
-
-      # Build react app
-      - name: Build the app
-        run: npm run build
-
-      # Install Surge 
-      - name: Install Surge
-        run: npm install -g surge
-
-      # Deploy to the defined URL using the token
-      - name: Deploy to surge
-        run: surge ./build URL_TO_DEPLOY_TO --token ${{secrets.TOKEN}}
+    build:                           
+        runs-on: ubuntu-latest 
+        name: Deploying to surge 
+        steps:    
+        - uses: actions/checkout@v2 
+        - name: Install Node.js
+          uses: actions/setup-node@v2-beta
+          with: 
+            node-version: 16 
+        - uses: borales/actions-yarn@v2.0.0 # `yarn install`
+          with:
+            cmd: install 
+        - name: Build React App                              
+          run: yarn build 
+        - name: Install Surge
+          run:npm install --global surge  
+        - name: Run surge
+          run: surge ./build myreact_mk.surge.sh --token ${{ secrets.SURGE_TOKEN }}
