--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,6 @@ jobs:
         - name: Build React App                              
           run: yarn build 
         - name: Install Surge
-          run:npm install --global surge  
+          run: npm install -g surge  
         - name: Run surge
           run: surge ./build myreact_mk.surge.sh --token ${{ secrets.SURGE_TOKEN }}
