--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,28 @@
-name: Deploy Surge Website   
-on: [push]
+name: Deploy
+
+on:
+  push:
+    branches: [ main ]
+
 jobs:
-    build:                           
-        runs-on: ubuntu-latest 
-        name: Deploying to surge 
-        steps:    
-        - uses: actions/checkout@v2 
-        - name: Install Node.js
-          uses: actions/setup-node@v2-beta
-          with: 
-            node-version: 12 
-        - uses: borales/actions-yarn@v2.0.0 # `yarn install`
-          with:
-            cmd: install 
-        - name: Build React App                              
-          run: yarn build 
-        - name: Install Surge
-          run: npm install -g surge  
-        - name: Run surge
-          run: surge ./build myreact_mk.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Setup Node
+      uses: actions/setup-node@v2-beta
+      with:
+          node-version: 12
+
+    - name: Build React App
+      run: |
+        npm install # Install Dependencies
+        CI=false npm run build # CI=false to ignore warnings
+
+    - name: Install Surge
+      run: npm install -g surge
+
+    - name: Deploy to Surge
+      run:  surge ./build https://muddiReactApp.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
